--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,21 @@
 .image{
   width: 100%;
 }
+.ev-img{
+  width: 100%;
+  height: 300px !important;
+  overflow: hidden;
+  object-fit: cover;
+}
+.ev-img-full{
+  width: 100%;
+  height: 400px !important;
+  overflow: hidden;
+  object-fit: cover;
+}
+.prof-img{
+  width: 225px;
+  height: 225px !important;
+  overflow: hidden;
+  object-fit: cover;
+}
